=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.1
 - Fixed: [ 2721892 ] Media Viewer ignores "Hide file name" config option (canajun2eh)
 - Fixed: [ 2702565 ] [4.2-4.2.5241] autocomplete not working when accented charac (wooc)
 - Added: Make Autocomplete an option in the GEDCOM config, Edit section (canajun2eh)
 - Fixed: [ 2634211 ] [4.2]+[4.1.6] Individual Add(ed) Facts not stored (fisharebest)
 - Fixed: [ 2604802 ] In the "Find Place" link the "Display all" list doesn't show (wooc)
 - Fixed: [ 2711647 ] Privacy option changes not working (canajun2eh)
 - Fixed: [ 2708857 ] [4.2.1svn5259] Lifespan chart reversed up/down arrows (wooc)
 - Fixed: [ 2333142 ] Relationship error (wooc)
 - Fixed: [ 2702570 ] [4.2-4.2.5241] autocomplete not active in quickupd. fields (wooc)
 - Fixed: [ 2702575 ] [4.2-4.2.5241] place with ( or with ) in googlemaps module (wooc)
 - Added: Extra language file for Shared Notes (windmillway)
 - Fixed: [ 2694015 ] Incorrect handling of Highlighted image (canajun2eh)
 - Changed: Add language editor support for comments on variable definition lines (canajun2eh)
 - Changed: Add language editor support for var. names or text enclosed in apostrophes (canajun2eh)
 - Fixed: [ 2687480 ] Language file editor wrong output when string is ";" (canajun2eh)
 - Fixed: [ 2685597 ] Missing underline for Preferred Name on Personal Details page (canajun2eh)
 - Added: [ 2684836 ] Files created with sitemap give an error on Google (borkhuis/wooc)
 - Changed: improved user interface for adding new fact from clipboard (canajun2eh)
 - Fixed: [ 2672126 ] Media Highlight/Thumb selectors not shown to editing users (canajun2eh)
 - Fixed: Log Error: admin - ERROR 8: Undefined index: small; (windmillway)